--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 theme: jekyll-theme-midnight
 name: BrikMentionのコードサーバー
 url: https://brikmention.github.io/BrikMention-CodeStorage/
-profile: true
+liquid:
+  error_mode        : warn
+  strict_filters    : false
+  strict_variables  : false
